--- a/index.html
+++ b/index.html
@@ -4,15 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./Usmon.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <H1>Margin vs Padding</H1>
-<DIV class="QORA">
-    <p>Model qismlarining tavsifi: <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto voluptatem aliquid, non maxime nemo quis, et beatae expedita numquam totam ipsa consequuntur. Fuga ullam cumque, voluptate laudantium quisquam odit magni officiis perferendis, minus quasi molestias hic! Unde accusantium reprehenderit cum.</p> <br> <p>Model qismlarining tavsifi: <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto voluptatem aliquid, non maxime nemo quis, et beatae expedita numquam totam ipsa consequuntur. Fuga ullam cumque, voluptate laudantium quisquam odit magni officiis perferendis, minus quasi molestias hic! Unde accusantium reprehenderit cum.</p>
-</DIV>
-
-
-    
+    <div class="qator container">
+        <h1 class="h1">justify-content</h1>
+    <div class="ota">
+        <div class="q"></div>
+        <div class="q"></div>
+        <div class="q"></div>
+    </div>
+    <div class="ota2">
+        <div class="w"></div>
+        <div class="w"></div>
+        <div class="w"></div>
+    </div>
+    <div class="ota3">
+        <div class="e"></div>
+        <div class="e"></div>
+        <div class="e"></div>
+    </div>
+    <div class="ota4">
+        <div class="r"></div>
+        <div class="r"></div>
+        <div class="r"></div>
+    </div>
+    <div class="ota5">
+        <div class="t"></div>
+        <div class="t"></div>
+        <div class="t"></div>
+    </div>
+    <div class="ota6">
+        <div class="y"></div>
+        <div class="y"></div>
+        <div class="y"></div>
+    </div>
+</div>   
 </body>
 </html>
